# KS_BarcodeReader

./: CMakeLists.txt  README.md
src/: BarcodeFinderConfig.cmake.in  CMakeLists.txt
src/Components/: CMakeLists.txt
src/Components/KS_BCReader/: CMakeLists.txt  KS_BCReader.cpp  KS_BCReader.hpp
src/Components/KS_BarcodeReader/: CMakeLists.txt  CMakeLists.txt.orig  KS_BarcodeReader.cpp  KS_BarcodeReader.cpp.orig  KS_BarcodeReader.hpp  KS_BarcodeReader.hpp.orig  MagickBitmapSource.h  libzbar.so.0.2.0
src/Components/KS_BarcodeReader/zxing_src/: .sconsign.dblite  CMakeLists.txt  SConscript
src/Components/KS_CvMat2MagickImage/: CMakeLists.txt  KS_CvMat2MagickImage.cpp  KS_CvMat2MagickImage.hpp
src/Components/KS_MagickImage2CvMat/: CMakeLists.txt  KS_MagickImage2CvMat.cpp  KS_MagickImage2CvMat.hpp
src/Components/KS_ROICrop/: CMakeLists.txt  KS_ROICrop.cpp  KS_ROICrop.hpp
src/Types/: CMakeLists.txt
